# OpenGL-Code

./: NewProject.sh  README.md
BreakOut/: CMakeLists.txt  MyOpenGLProject
BreakOut/include/: ballObject.h  game.h  gameLevel.h  game_object.h  light.h  particle_generator.h  resource_manager.h  textRenderer.h
BreakOut/shader/: particle.fs  particle.vs  spriteVertex.vs
BreakOut/src/: ballObejct.cpp  game.cpp  gameLevel.cpp  game_object.cpp  light.cpp  main.cpp  particle_generator.cpp  sprite_renderer.cpp  textRenderer.cpp
Camera/: MyOpenGLProject
Camera/es/: moveCamera.cpp  rotateY.cpp
Camera/include/: shader_s.h
Camera/shader/: shader.vs
Camera/src/: cameraRotate.cpp
Color/: MyOpenGLProject
Color/shader/: shader.fs
Color/src/: color.cpp
CoordinateSystem/: MyOpenGLProject
CoordinateSystem/include/: shader_s.h
CoordinateSystem/shader/: shader.fs
DiffuseMap/: MyOpenGLProject  build_and_run.sh  glad.c
DiffuseMap/src/: main.cpp
FirstOpenGL/: CMakeLists.txt
Flashlight/: MyOpenGLProject
Font/: CMakeLists.txt  MyOpenGLProject
LightCaster/: CMakeLists.txt  MyOpenGLProject
Lighting/: CMakeLists.txt  MyOpenGLProject
Lighting/MyCode/: light.cpp  lightArround.cpp
Lighting/include/: cameraGravity.h  shader_s.h
Lighting/shader/: lampShader.vs  objectShader.vs
Lighting/src/: lightWithCameraClass.cpp
Material/: MyOpenGLProject
MultipleLights/: MyOpenGLProject
OpenGLIncludes/: CMakeLists.txt
OpenGLShader/: CMakeLists.txt  MyOpenGLProject
OpenGLShader/shader/: shader.fs  shader.vs
OpenGLShader/src/: retangolo.cpp
PointLight/: CMakeLists.txt  MyOpenGLProject
SmoothLight/: MyOpenGLProject
Texture/: MyOpenGLProject
Transformation/: MyOpenGLProject
(+35 files in other folders)
